feat(libraries): add dir browser
